fix(ecommerce): home page search section z-index

--- a/projects/ecommerce/src/app/home/home.component.scss
+++ b/projects/ecommerce/src/app/home/home.component.scss
@@ -1,7 +1,9 @@
 :host {
   ec-hydration-visualizer:first-of-type {
+    position: relative;
     width: 100vw;
     transform: translateX(-50%);
     margin-left: 50%;
+    z-index: 1;
   }
 }
